--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -1,4 +1,4 @@
-<div class="main container">
+<div class="main container-fluid">
   <h1>Things</h1>
   <form ng-submit="save()" name="form" novalidate="" class="thing-form">
     <p class="input-group">
