--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -33,7 +33,7 @@
 <div class="row" style="margin-top:-15px;">
   <div class="col-md-2">
     <div class="list-group">
-      <a class="list-group-item" style="background-color:black;color:white;cursor:pointer;" ui-sref="newMessage">
+      <a class="list-group-item" style="background-color:black;color:white;" ui-sref="newMessage">
         新消息
         <span class="glyphicon glyphicon-plus pull-right" aria-hidden="true"></span>
       </a>
@@ -48,7 +48,7 @@
       </a>
     </div>
     <div class="list-group" style="margin-top:-15px;">
-      <a class="list-group-item" style="background-color:black;color:white;cursor:pointer;" ui-sref="contacts">
+      <a class="list-group-item" style="background-color:black;color:white;" ui-sref="contacts">
         短讯
         <span class="glyphicon glyphicon-plus pull-right" aria-hidden="true"></span>
       </a>
